[package]
name = "transactional-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
bitlab = "1.1.0"
bitmaps = "3.2.0"
c2rust-bitfields = "0.17.0"
thiserror = "1.0.38"

[dev-dependencies]
test-case = "3.0.0"